#501 Fixed code smells and warning for: MainGameOrderTicketDisplay.java