@@ -13,12 +13,10 @@ import com.badlogic.gdx.scenes.scene2d.utils.Drawable;
 import com.badlogic.gdx.scenes.scene2d.Stage;
 import com.badlogic.gdx.scenes.scene2d.ui.Cell;
 import com.badlogic.gdx.scenes.scene2d.utils.TextureRegionDrawable;
-import com.badlogic.gdx.utils.Array;
 import com.badlogic.gdx.utils.Scaling;
 import com.badlogic.gdx.utils.SnapshotArray;
 import com.badlogic.gdx.utils.TimeUtils;
 import com.csse3200.game.components.CombatStatsComponent;
-import com.csse3200.game.components.player.InventoryComponent;
 import com.csse3200.game.entities.Entity;
 import com.csse3200.game.rendering.RenderService;
 import com.csse3200.game.services.PlayerService;
@@ -28,8 +26,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-import com.csse3200.game.services.*;
 
 /**
  * Displays order tickets on the main game screen. This class manages the
@@ -40,35 +38,32 @@ import com.csse3200.game.services.*;
 public class MainGameOrderTicketDisplay extends UIComponent {
     private static final Logger logger = LoggerFactory.getLogger(MainGameOrderTicketDisplay.class);
     private static final float Z_INDEX = 3f;
-    private static final float viewPortHeightMultiplier = 7f / 9f;
-//    private final float viewportHeight;
+    private static final float VIEW_PORT_HEIGHT_MULTIPLIER = 7f / 9f;
     private final float viewportWidth;
     private final float viewportHeight;
-    private static final int distance = 20;
-    private static ArrayList<Table> tableArrayList;
-    private static ArrayList<Long> startTimeArrayList;
-    private static ArrayList<Docket> backgroundArrayList;
-    private static ArrayList<Label> countdownLabelArrayList;
-    private static ArrayList<Long> recipeTimeArrayList;
-    private static int orderNumb = 0;
+    private static final int DISTANCE = 20;
+    private static final ArrayList<Table> tableArrayList = new ArrayList<>();
+    private static final ArrayList<Long> startTimeArrayList = new ArrayList<>();
+    private static final ArrayList<Docket> backgroundArrayList = new ArrayList<>();
+    private static final ArrayList<Label> countdownLabelArrayList = new ArrayList<>();
+    private static final ArrayList<Long> recipeTimeArrayList = new ArrayList<>();
+    private int orderNumb = 0;
     private static final long DEFAULT_TIMER = 10000;
-    private static int recipeValue;
     private Recipe recipe;
-    public InventoryComponent inventoryComponent;
     private Image mealImage;
-    private DocketMealDisplay mealDisplay;
+    private final DocketMealDisplay mealDisplay;
     private static final float DISTANCE_MULTIPLIER = 0.015f;
-    public CombatStatsComponent combatStatsComponent;
-    public int goldMultiplier = 1;
+    private CombatStatsComponent combatStatsComponent;
     private boolean isPaused = false;
     private long pauseStartTime = 0;
     private long totalPausedDuration = 0;
 
-//    private static ArrayList<TextureRegionDrawable> textureArrayList;
-    private static ArrayList<Image> imageArrayList;
-    private static ArrayList<String> stringArrayList;
+    private static final ArrayList<Image> imageArrayList = new ArrayList<>();
+    private static final ArrayList<String> stringArrayList = new ArrayList<>();
 
-    private static Map<String, Texture> texture_map;
+    private static final Map<String, Texture> textureMap = new HashMap<>();
+
+    private final String TIMER = "Timer: ";
 
     /**
      * Constructs an MainGameOrderTicketDisplay instance
@@ -76,24 +71,25 @@ public class MainGameOrderTicketDisplay extends UIComponent {
     public MainGameOrderTicketDisplay(RenderService renderService, PlayerService playerService) {
         this.viewportHeight = renderService.getStage().getViewport().getCamera().viewportHeight;
         this.viewportWidth = renderService.getStage().getViewport().getCamera().viewportWidth;
-
-        tableArrayList = new ArrayList<>();
-        startTimeArrayList = new ArrayList<>();
-        backgroundArrayList = new ArrayList<>();
-        countdownLabelArrayList = new ArrayList<>();
-        recipeTimeArrayList = new ArrayList<>();
         mealDisplay = new DocketMealDisplay();
-        setRecipeValue(2);
 
-        playerService.getEvents().addListener("playerCreated", (Entity player) -> {
-            combatStatsComponent = player.getComponent(CombatStatsComponent.class);
-        });
-//        textureArrayList=new ArrayList<>();
-        imageArrayList=new ArrayList<>();
-        stringArrayList=new ArrayList<>();
-
-        texture_map=new HashMap<>();
+        playerService.getEvents().addListener("playerCreated",
+                (Entity player) -> combatStatsComponent = player.getComponent(CombatStatsComponent.class));
         loadTextures();
+    }
+
+    /**
+     * Get combat statistics component
+     */
+    public CombatStatsComponent getCombatStats() {
+        return combatStatsComponent;
+    }
+
+    /**
+     * Sets the combat statistics component
+     */
+    public void setCombatStatsComponent(CombatStatsComponent newCombatStatsComponent) {
+        combatStatsComponent = newCombatStatsComponent;
     }
 
     /**
@@ -134,12 +130,6 @@ public class MainGameOrderTicketDisplay extends UIComponent {
             docket.setPaused(paused);
         }
     }
-
-    /**
-     * Pauses all order ticket times for the specified duration in milliseconds.
-     *
-     * @param durationMillis duration to pause in milliseconds
-     */
     
 
     /**
@@ -154,8 +144,8 @@ public class MainGameOrderTicketDisplay extends UIComponent {
         ServiceLocator.getDocketService().getEvents().addListener("removeBigTicket", this::removeBigTicket);
 
         //From Team 2, these listeners are for our dance party upgrade to pause and unpause docket times
-        ServiceLocator.getDocketService().getEvents().addListener("Dancing", ()->{setPaused(true);});
-        ServiceLocator.getDocketService().getEvents().addListener("UnDancing", ()->{setPaused(false);});
+        ServiceLocator.getDocketService().getEvents().addListener("Dancing", ()->setPaused(true));
+        ServiceLocator.getDocketService().getEvents().addListener("UnDancing", ()->setPaused(false));
 
         //From team 2, I used your dispose method here when listening for a new day, so current dockets get removed
         //when the end of day occurs
@@ -175,7 +165,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
 
     private void loadTextures() {
         for(String path : DocketMealDisplay.getMealDocketTextures()){
-            texture_map.put(path, new Texture(Gdx.files.local(path)));
+            textureMap.put(path, new Texture(Gdx.files.local(path)));
         }
     }
 
@@ -194,7 +184,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
         table.setFillParent(false);
         table.setSize(viewportWidth * 3f / 32f, 5f / 27f * viewportHeight); // DEFAULT_HEIGHT
         float xVal = cntXval(250f, tableArrayList.size());
-        float yVal = viewportHeight * viewPortHeightMultiplier;
+        float yVal = viewportHeight * VIEW_PORT_HEIGHT_MULTIPLIER;
         table.setPosition(xVal, yVal);
         table.padTop(25f);
         Docket background = new Docket(getTimer());
@@ -210,13 +200,13 @@ public class MainGameOrderTicketDisplay extends UIComponent {
 
         String s=getRecipe().getName();
         stringArrayList.add(s);
-        Texture texture=texture_map.get(mealDisplay.getMealImage(s,"vertical"));
+        Texture texture= textureMap.get(mealDisplay.getMealImage(s,"vertical"));
         mealImage=new Image(new TextureRegionDrawable(texture));
         imageArrayList.add(mealImage);
         table.add(mealImage).row();
 
         recipeTimeArrayList.add(getTimer());
-        Label countdownLabel = new Label("Timer: " + getTimer(), skin);
+        Label countdownLabel = new Label(TIMER + getTimer(), skin);
         countdownLabelArrayList.add(countdownLabel);
         table.add(countdownLabel).padLeft(10f).row();
 
@@ -247,7 +237,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
 
         for (int i = index + 1; i < tableArrayList.size(); i++) {
             Table currTable = tableArrayList.get(i);
-            currTable.setX(currTable.getX() - (distance + viewportWidth * 3f / 32f));
+            currTable.setX(currTable.getX() - (DISTANCE + viewportWidth * 3f / 32f));
         }
     }
 
@@ -260,19 +250,19 @@ public class MainGameOrderTicketDisplay extends UIComponent {
             logger.warn("No dockets to shift left");
             return;
         }
-        Table firstTable = tableArrayList.remove(0);
+        Table firstTable = tableArrayList.removeFirst();
         tableArrayList.add(firstTable);
 
-        Docket firstDocket = backgroundArrayList.remove(0);
+        Docket firstDocket = backgroundArrayList.removeFirst();
         backgroundArrayList.add(firstDocket);
 
-        Long firstStartTime = startTimeArrayList.remove(0);
+        Long firstStartTime = startTimeArrayList.removeFirst();
         startTimeArrayList.add(firstStartTime);
 
-        Label firstCountdownLabel = countdownLabelArrayList.remove(0);
+        Label firstCountdownLabel = countdownLabelArrayList.removeFirst();
         countdownLabelArrayList.add(firstCountdownLabel);
 
-        long firstRecipeTime = recipeTimeArrayList.remove(0);
+        long firstRecipeTime = recipeTimeArrayList.removeFirst();
         recipeTimeArrayList.add(firstRecipeTime);
 
         Image firstImage = imageArrayList.removeFirst();
@@ -283,8 +273,6 @@ public class MainGameOrderTicketDisplay extends UIComponent {
 
         updateDocketPositions();
         updateDocketSizes();
-
-//        logger.info("Docket positions updated after left shift");
     }
 
 
@@ -295,44 +283,20 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * @param table  the table representing the docket.
      * @param i  the index of the docket.
      */
-    public void stageDispose(Docket docket, Table table, int i, Boolean isSuccess) {
+    public void stageDispose(Docket docket, Table table, int i) {
         logger.info("Dispose Docket");
         table.setBackground((Drawable) null);
         table.clear();
         table.remove();
-        // ServiceLocator.getDocketService().getEvents().trigger("removeOrder", i);
         docket.dispose();
         tableArrayList.remove(i);
         backgroundArrayList.remove(i);
         startTimeArrayList.remove(i);
         countdownLabelArrayList.remove(i);
         recipeTimeArrayList.remove(i);
-        // combatStatsComponent.addGold(getRecipeValue());
-        // combatStatsComponent.addGold(getRecipeValue() * goldMultiplier);
-        // Commenting out because gold is already incremented in StationServingComponent.java in scoreMeal() method.
-        // ServiceLocator.getLevelService().setCurrGold(ServiceLocator.getLevelService().getCurrGold() + 10);
-        // if (isSuccess) {
-        //    combatStatsComponent.addGold(getRecipeValue());
-        // }
         stringArrayList.remove(i);
         imageArrayList.remove(i);
 
-    }
-
-    /**
-     * Sets the recipe value
-     * @param value the price of the recipe
-     */
-    public void setRecipeValue(int value) {
-        recipeValue = value;
-    }
-
-    /**
-     * Gets the recipe value
-     * @return the recipe price
-     */
-    public static int getRecipeValue() {
-        return recipeValue;
     }
 
     /**
@@ -344,20 +308,20 @@ public class MainGameOrderTicketDisplay extends UIComponent {
             logger.warn("No dockets to shift right");
             return;
         }
-        Table lastTable = tableArrayList.remove(tableArrayList.size() - 1);
-        tableArrayList.add(0, lastTable);
+        Table lastTable = tableArrayList.removeLast();
+        tableArrayList.addFirst(lastTable);
 
-        Docket lastDocket = backgroundArrayList.remove(backgroundArrayList.size() - 1);
-        backgroundArrayList.add(0, lastDocket);
+        Docket lastDocket = backgroundArrayList.removeLast();
+        backgroundArrayList.addFirst(lastDocket);
 
-        Long lastStartTime = startTimeArrayList.remove(startTimeArrayList.size() - 1);
-        startTimeArrayList.add(0, lastStartTime);
+        Long lastStartTime = startTimeArrayList.removeLast();
+        startTimeArrayList.addFirst(lastStartTime);
 
-        Label lastCountdownLabel = countdownLabelArrayList.remove(countdownLabelArrayList.size() - 1);
-        countdownLabelArrayList.add(0, lastCountdownLabel);
+        Label lastCountdownLabel = countdownLabelArrayList.removeLast();
+        countdownLabelArrayList.addFirst(lastCountdownLabel);
 
-        long recipeTime = recipeTimeArrayList.remove(recipeTimeArrayList.size() - 1);
-        recipeTimeArrayList.add(0, recipeTime);
+        long recipeTime = recipeTimeArrayList.removeLast();
+        recipeTimeArrayList.addFirst(recipeTime);
 
         Image lastImage = imageArrayList.removeLast();
         imageArrayList.addFirst(lastImage);
@@ -384,86 +348,98 @@ public class MainGameOrderTicketDisplay extends UIComponent {
     }
 
     /**
-     * Updates the sizes of all dockets. The last docket in the list is enlarged, while others remain the same size.
+     * Updates the docket sizes
      */
     public void updateDocketSizes() {
-        float viewportWidth = Gdx.graphics.getWidth();
-        float viewportHeight = Gdx.graphics.getHeight();
-        float scaleFactor = getScalingFactor(viewportWidth, viewportHeight);
+        float graphicsWidth = Gdx.graphics.getWidth();
+        float graphicsHeight = Gdx.graphics.getHeight();
+        float scaleFactor = getScalingFactor(graphicsWidth, graphicsHeight);
 
-        float docketWidthRatio = 0.08f;
-        float docketHeightRatio = 0.25f;
-
-        float normalDocketWidth = 1280f * docketWidthRatio * scaleFactor;
-        float normalDocketHeight = 800f * docketHeightRatio * scaleFactor;
-
+        // Docket size ratios
+        float normalDocketWidth = 1280f * 0.08f * scaleFactor;
+        float normalDocketHeight = 800f * 0.25f * scaleFactor;
         float enlargedDocketWidth = normalDocketWidth * 1.7f;
         float enlargedDocketHeight = normalDocketHeight * 1.7f;
 
-        float dynamicDistanceLeft = 0.105f; // 225f Percentage of the width to place first docket
-        float leftHandSideDistance = viewportWidth * dynamicDistanceLeft;
-        float dynamicDistanceRight = 0.045f; //115f Percentage of the width to place the enlarged/tail docket
-        float rightHandSideDistance = viewportWidth * dynamicDistanceRight;
-
-
-        float xPosEnlarged = viewportWidth - enlargedDocketWidth - rightHandSideDistance;
-        float yPosEnlarged = (viewportHeight * 0.938f) - (enlargedDocketHeight - 15);
-
-        float yPosNormal = (viewportHeight * 0.938f) - (normalDocketHeight*0.8f - 15);
+        // Positioning
+        float xPosEnlarged = graphicsWidth - enlargedDocketWidth - (graphicsWidth * 0.045f);
+        float yPosEnlarged = (graphicsHeight * 0.938f) - (enlargedDocketHeight - 15);
+        float yPosNormal = (graphicsHeight * 0.938f) - (normalDocketHeight * 0.8f - 15);
+        float leftHandSideDistance = graphicsWidth * 0.105f;
 
         for (int i = 0; i < tableArrayList.size(); i++) {
             Table table = tableArrayList.get(i);
+            boolean isLastDocket = (i == tableArrayList.size() - 1);
 
-            Array<Cell> cells = table.getCells();
-            if (i == tableArrayList.size() - 1) { // Tail docket
-                table.setSize(enlargedDocketWidth, enlargedDocketHeight);
-                // Fixed position for enlarged docket
-                table.setPosition(xPosEnlarged, yPosEnlarged);
-                table.setZIndex(10);
+            updateTableSizeAndPosition(table, isLastDocket, enlargedDocketWidth, enlargedDocketHeight, normalDocketWidth, normalDocketHeight, xPosEnlarged, yPosEnlarged, leftHandSideDistance, i, yPosNormal);
+            updateMealImage(table, isLastDocket, stringArrayList.get(i));
+            updateCellStyles(table, isLastDocket, graphicsWidth);
+        }
+    }
 
-                mealImage=(Image)table.getChildren().get(2);
-                Texture texture=texture_map.get(mealDisplay.getMealImage(stringArrayList.get(i),"vertical"));
-                mealImage.setDrawable(new TextureRegionDrawable(texture));
+    /**
+     * Updates the table size and position
+     * @param table: the table to be updated
+     * @param isLastDocket: a flag to check if it is the last docket
+     * @param enlargedDocketWidth: the width of the enlarged docket
+     * @param enlargedDocketHeight: the height of the enlarged docket
+     * @param normalDocketWidth: the width of the normal docket
+     * @param normalDocketHeight: the height of the normal docket
+     * @param xPosEnlarged: the x Position of the enlarged docket
+     * @param yPosEnlarged: the y Position of the enlarged docket
+     * @param leftHandSideDistance: the distance from the left side of the screen
+     * @param index: the index of the docket
+     * @param yPosNormal: the y position of the normal docket
+     */
+    private void updateTableSizeAndPosition(Table table, boolean isLastDocket, float enlargedDocketWidth, float enlargedDocketHeight, float normalDocketWidth, float normalDocketHeight, float xPosEnlarged, float yPosEnlarged, float leftHandSideDistance, int index, float yPosNormal) {
+        float width = isLastDocket ? enlargedDocketWidth : normalDocketWidth * 1.3f;
+        float height = isLastDocket ? enlargedDocketHeight : normalDocketHeight * 0.8f;
+        float xPos = isLastDocket ? xPosEnlarged : cntXval(leftHandSideDistance, index + 1);
+        float yPos = isLastDocket ? yPosEnlarged : yPosNormal;
 
-                // Apply enlarged font size
-                for (int j = 0; j < cells.size; j++) {
-                    if (cells.get(j).getActor() instanceof Label label) {
-                        label.setFontScale(viewportWidth / 1920f);
-                        if (label.getText().toString().contains("Timer")) {
-                            cells.get(j).padBottom(5f);
-                        }
-                    } else if (cells.get(j).getActor() instanceof Image image) {
-                        cells.get(j).padBottom(10f);
-                        image.setScaling(Scaling.fit);
-                    }
+        table.setSize(width, height);
+        table.setPosition(xPos, yPos);
+        table.setZIndex(isLastDocket ? 10 : 5);
+    }
+
+    /**
+     * Updates the image of the meal
+     * @param table: the table being updated
+     * @param isLastDocket: a flag to check whether it is the last docket
+     * @param mealId: the string representing the mealID
+     */
+    private void updateMealImage(Table table, boolean isLastDocket, String mealId) {
+        mealImage = (Image) table.getChildren().get(2);
+        String orientation = isLastDocket ? "vertical" : "horizontal";
+        Texture texture = textureMap.get(mealDisplay.getMealImage(mealId, orientation));
+        mealImage.setDrawable(new TextureRegionDrawable(texture));
+    }
+
+    /**
+     * Updates the cell styles
+     * @param table: the table being updated
+     * @param isLastDocket: a flag to check if it is the last docket
+     * @param graphicsWidth: the width of the viewport
+     */
+    private void updateCellStyles(Table table, boolean isLastDocket, float graphicsWidth) {
+        for (Cell cell : table.getCells()) {
+            Actor actor = cell.getActor();
+
+            if (actor instanceof Label label) {
+                float fontScale = isLastDocket ? graphicsWidth / 1920f : 0.7f * (graphicsWidth / 1920f);
+                label.setFontScale(fontScale);
+                if (label.getText().toString().contains("Timer")) {
+                    cell.padBottom(isLastDocket ? 5f : 0f);
                 }
-            } else { // Non-enlarged dockets
-                table.setSize(normalDocketWidth*1.3f, normalDocketHeight*0.8f);
-                float xVal = cntXval(leftHandSideDistance,i + 1);
-                table.setPosition(xVal, yPosNormal);
-                table.setZIndex(5);
+            }
 
-                mealImage=(Image)table.getChildren().get(2);
-                Texture texture=texture_map.get(mealDisplay.getMealImage(stringArrayList.get(i),"horizontal"));
-                mealImage.setDrawable(new TextureRegionDrawable(texture));
-
-                for (int j = 0; j < cells.size; j++) {
-                    if (cells.get(j).getActor() instanceof Label label) {
-                        if (viewportWidth == 0) {
-                            viewportWidth = 1;
-                        }
-                        label.setFontScale(0.7f * (viewportWidth / 1920f));
-                        if (label.getText().toString().contains("Timer")) {
-                            cells.get(j).padBottom(0f);
-                        }
-                    } else if (cells.get(j).getActor() instanceof Image image) {
-                        cells.get(j).padBottom(5f);
-                        image.setScaling(Scaling.fit);
-                    }
-                }
+            if (actor instanceof Image image) {
+                cell.padBottom(isLastDocket ? 10f : 5f);
+                image.setScaling(Scaling.fit);
             }
         }
     }
+
 
     /**
      * Gets the scaling factor in respect to current width and height of screen.
@@ -497,16 +473,16 @@ public class MainGameOrderTicketDisplay extends UIComponent {
             long remainingTime = recipeTimeArrayList.get(i) - elapsedTime;
 
             if (remainingTime > 0) {
-                currCountdown.setText("Timer: " + (remainingTime / 1000));
+                currCountdown.setText(TIMER + (remainingTime / 1000));
                 currBackground.updateDocketTexture((double) remainingTime / 1000);
                 currTable.setBackground(currBackground.getImage().getDrawable());
             } else {
                 logger.info("Remaining time is 0");
-                stageDispose(currBackground, currTable, i, false);
+                stageDispose(currBackground, currTable, i);
             }
         }
         if (!tableArrayList.isEmpty()) {
-            Table lastTable = tableArrayList.get(tableArrayList.size() - 1);
+            Table lastTable = tableArrayList.getLast();
             updateBigTicketInfo(lastTable);
         }
         updateDocketPositions();
@@ -521,7 +497,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
         Docket currBackground = backgroundArrayList.get(index);
         Table currTable = tableArrayList.get(index);
 
-        stageDispose(currBackground, currTable, index, true);
+        stageDispose(currBackground, currTable, index);
     }
 
     /**
@@ -552,16 +528,10 @@ public class MainGameOrderTicketDisplay extends UIComponent {
                 if (i == 0) {
                     orderNum = text.replace("Order ", "");
                 } else if (text.startsWith("Timer:")) {
-                    timeLeft = text.replace("Timer: ", "");
-                } else { // handling meal name
-                    if (!ingredientBool) { // only handles the ingredient meal
+                    timeLeft = text.replace(TIMER, "");
+                } else if (!ingredientBool) { // only handles the ingredient meal
                         meal = text;
                         ingredientBool = true;
-                    } else {
-                        // TODO: if you want to parse the individual ingredients of the recipe, factor the text value here
-                        continue;
-                    }
-
                 }
             }
         }
@@ -608,8 +578,6 @@ public class MainGameOrderTicketDisplay extends UIComponent {
     @Override
     public void dispose() {
         // Cleanup resources
-        //from team 2, I reset the ordernumb back to 0, for each new day when dispose is called
-//        orderNumb = 0;
         for (Table table : tableArrayList) {
             table.clear();
             table.remove();
@@ -619,7 +587,6 @@ public class MainGameOrderTicketDisplay extends UIComponent {
         backgroundArrayList.clear();
         countdownLabelArrayList.clear();
         stringArrayList.clear();
-//        textureArrayList.clear();
         imageArrayList.clear();
         super.dispose();
     }
@@ -645,14 +612,14 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * @return the float value of viewportHeightMultiplayer.
      */
     public float getViewPortHeightMultiplier() {
-        return viewPortHeightMultiplier;
+        return VIEW_PORT_HEIGHT_MULTIPLIER;
     }
 
     /**
      * Returns the list of tables used for displaying order tickets.
      * @return the list of order ticket tables.
      */
-    public static ArrayList<Table> getTableArrayList() {
+    public static List<Table> getTableArrayList() {
         return tableArrayList;
     }
 
@@ -660,7 +627,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * Gets the times that the recipes were created
      * @return the start time array list
      */
-    public static ArrayList<Long> getStartTimeArrayList() {
+    public static List<Long> getStartTimeArrayList() {
         return startTimeArrayList;
     }
 
@@ -668,7 +635,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * Gets the recipes' timer count down labels
      * @return the countdown label array list
      */
-    public static ArrayList<Label> getCountdownLabelArrayList() {
+    public static List<Label> getCountdownLabelArrayList() {
         return countdownLabelArrayList;
     }
 
@@ -676,7 +643,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * Gets the Docket's background displays
      * @return the background array list
      */
-    public static ArrayList<Docket> getBackgroundArrayList() {
+    public static List<Docket> getBackgroundArrayList() {
         return backgroundArrayList;
     }
 
@@ -692,7 +659,7 @@ public class MainGameOrderTicketDisplay extends UIComponent {
      * Gets the list of recipe times
      * @return the recipe time array list
      */
-    public static ArrayList<Long> getRecipeTimeArrayList() {
+    public static List<Long> getRecipeTimeArrayList() {
         return recipeTimeArrayList;
     }
 
